Refactor collection classes to use Heap abstraction and update related tests. Add meld method to Binary heap

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,9 @@
 add_library(StructuresLib STATIC
         Binary.cpp
         Binary.hpp
-        Collection.hpp
+        Heap.hpp
         Element.hpp
-        Collection.cpp
+        Heap.cpp
         Utils.cpp
         Utils.hpp
 )
