--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 find_package(GTest REQUIRED)
 
 add_executable(Tests
-        HeapTests.cpp
+        BinaryTests.cpp
         ElementTests.cpp
 )
 include_directories(${GTEST_INCLUDE_DIRS})
