Added functions that will be tested to base class and updated Binary to implement that functions

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,8 @@ add_library(StructuresLib STATIC
         Heap.cpp
         Utils.cpp
         Utils.hpp
+        Binomial.cpp
+        Binomial.hpp
 )
 target_include_directories(StructuresLib
         PUBLIC
