--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,6 +3,7 @@ find_package(GTest REQUIRED)
 add_executable(Tests
         BinaryTests.cpp
         ElementTests.cpp
+        BinomialTests.cpp
 )
 include_directories(${GTEST_INCLUDE_DIRS})
 target_link_libraries(Tests
