Add Pairing heap implementation with basic operations and tests

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,8 @@ add_library(StructuresLib STATIC
         Utils.hpp
         Binomial.cpp
         Binomial.hpp
+        Pairing.cpp
+        Pairing.hpp
 )
 target_include_directories(StructuresLib
         PUBLIC
